--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             --blue-light: #CAEDFF;
             --blue: #a8d8f0;
             --lavender: #e8d9ff;
+            --mint: #98f5e1;
+            --peach: #ffcba4;
             --text-dark: #555;
             --text-light: #666;
             --white: #ffffff;
@@ -56,6 +58,33 @@
             min-height: 100vh;
         }
 
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                135deg,
+                rgba(255, 212, 229, 0.3) 0%,
+                rgba(202, 237, 255, 0.3) 25%,
+                rgba(232, 217, 255, 0.3) 50%,
+                rgba(152, 245, 225, 0.2) 75%,
+                rgba(255, 203, 164, 0.3) 100%
+            );
+            background-size: 400% 400%;
+            animation: gradientShift 15s ease infinite;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
         /* パーティクル背景 */
         #particles-container {
             position: fixed;
@@ -71,35 +100,69 @@
             position: absolute;
             width: 10px;
             height: 10px;
-            background: radial-gradient(circle, rgba(255, 255, 255, 0.8), rgba(255, 212, 229, 0.6));
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.9), rgba(255, 212, 229, 0.7));
             border-radius: 50%;
-            animation: float 10s infinite;
-            box-shadow: 0 0 10px rgba(255, 212, 229, 0.5);
+            animation: float 10s infinite, pulse 2s ease-in-out infinite, colorShift 5s ease infinite;
+            box-shadow: 0 0 15px rgba(255, 212, 229, 0.6), 0 0 30px rgba(202, 237, 255, 0.4);
+        }
+
+        .particle:nth-child(odd) {
+            background: radial-gradient(circle, rgba(202, 237, 255, 0.9), rgba(168, 216, 240, 0.7));
+        }
+
+        .particle:nth-child(3n) {
+            background: radial-gradient(circle, rgba(232, 217, 255, 0.9), rgba(200, 180, 255, 0.7));
         }
 
         @keyframes float {
             0%, 100% {
-                transform: translateY(0) translateX(0);
+                transform: translateY(0) translateX(0) rotate(0deg);
                 opacity: 0;
             }
             50% {
                 opacity: 1;
             }
             100% {
-                transform: translateY(-100vh) translateX(50px);
+                transform: translateY(-100vh) translateX(50px) rotate(360deg);
                 opacity: 0;
             }
         }
 
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.3); }
+        }
+
+        @keyframes colorShift {
+            0% { filter: hue-rotate(0deg); }
+            50% { filter: hue-rotate(30deg); }
+            100% { filter: hue-rotate(0deg); }
+        }
+
         /* ヘッダー */
         header {
-            background: linear-gradient(135deg, rgba(255, 212, 229, 0.95), rgba(202, 237, 255, 0.95));
+            background: linear-gradient(
+                135deg,
+                rgba(255, 212, 229, 0.95) 0%,
+                rgba(202, 237, 255, 0.95) 25%,
+                rgba(232, 217, 255, 0.95) 50%,
+                rgba(152, 245, 225, 0.9) 75%,
+                rgba(255, 203, 164, 0.95) 100%
+            );
+            background-size: 300% 300%;
+            animation: headerGradient 8s ease infinite;
             padding: 2rem 1rem;
             text-align: center;
-            box-shadow: 0 5px 20px rgba(255, 182, 193, 0.4);
+            box-shadow: 0 5px 30px rgba(255, 182, 193, 0.5), 0 10px 40px rgba(202, 237, 255, 0.3);
             border-bottom: 3px solid var(--white);
             position: relative;
             z-index: 10;
+        }
+
+        @keyframes headerGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .header-logo {
@@ -107,12 +170,17 @@
             width: 80%;
             margin-bottom: 1rem;
             filter: drop-shadow(0 5px 15px rgba(255, 182, 193, 0.5));
-            animation: logoFloat 3s ease-in-out infinite;
+            animation: logoFloat 3s ease-in-out infinite, logoGlow 4s ease-in-out infinite;
         }
 
         @keyframes logoFloat {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
+            0%, 100% { transform: translateY(0) rotate(-1deg); }
+            50% { transform: translateY(-10px) rotate(1deg); }
+        }
+
+        @keyframes logoGlow {
+            0%, 100% { filter: drop-shadow(0 5px 15px rgba(255, 182, 193, 0.5)) brightness(1); }
+            50% { filter: drop-shadow(0 8px 25px rgba(202, 237, 255, 0.8)) brightness(1.1); }
         }
 
         header h1 {
@@ -120,10 +188,24 @@
             color: var(--text-dark);
             text-shadow: 2px 2px 0px var(--white), 3px 3px 6px rgba(255, 182, 193, 0.5);
             margin-bottom: 0.5rem;
-            background: linear-gradient(135deg, var(--pink-dark), var(--blue));
+            background: linear-gradient(
+                90deg,
+                var(--pink-dark),
+                var(--blue),
+                var(--lavender),
+                var(--mint),
+                var(--pink-dark)
+            );
+            background-size: 200% auto;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            animation: textGradient 4s linear infinite;
+        }
+
+        @keyframes textGradient {
+            0% { background-position: 0% center; }
+            100% { background-position: 200% center; }
         }
 
         .subtitle {
@@ -138,7 +220,8 @@
             align-items: center;
             gap: 0.5rem;
             padding: 0.8rem 2rem;
-            background: linear-gradient(135deg, var(--white), var(--pink-light));
+            background: linear-gradient(135deg, var(--white), var(--pink-light), var(--blue-light), var(--white));
+            background-size: 300% 300%;
             border: 2px solid var(--pink);
             border-radius: 50px;
             color: var(--text-dark);
@@ -147,12 +230,42 @@
             font-size: 1rem;
             transition: all 0.3s ease;
             box-shadow: 0 4px 15px rgba(255, 182, 193, 0.4);
+            animation: buttonGradient 5s ease infinite;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .help-button::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                45deg,
+                transparent 30%,
+                rgba(255, 255, 255, 0.5) 50%,
+                transparent 70%
+            );
+            animation: shine 3s infinite;
+        }
+
+        @keyframes buttonGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes shine {
+            0% { transform: translateX(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) rotate(45deg); }
         }
 
         .help-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(255, 182, 193, 0.6);
-            background: linear-gradient(135deg, var(--pink-light), var(--white));
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 8px 30px rgba(255, 182, 193, 0.7), 0 0 20px rgba(202, 237, 255, 0.5);
+            background: linear-gradient(135deg, var(--pink-light), var(--white), var(--blue-light));
         }
 
         .help-icon {
@@ -201,14 +314,14 @@
         }
 
         .tool-card {
-            background: rgba(255, 255, 255, 0.95);
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.98), rgba(255, 240, 245, 0.95));
             backdrop-filter: blur(10px);
             border: 2px solid transparent;
             border-radius: 20px;
             padding: 1.5rem;
             text-decoration: none;
             color: var(--text-dark);
-            transition: all 0.3s ease;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
             position: relative;
             overflow: hidden;
@@ -226,9 +339,8 @@
         }
 
         .tool-card:hover {
-            transform: translateY(-8px) scale(1.02);
-            border-color: var(--pink);
-            box-shadow: 0 15px 40px rgba(255, 182, 193, 0.4), 0 0 30px rgba(202, 237, 255, 0.3);
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(255, 182, 193, 0.4);
         }
 
         .tool-card-content {
@@ -263,15 +375,35 @@
             font-size: 0.7rem;
             font-weight: bold;
             text-transform: uppercase;
-            background: linear-gradient(135deg, #a8f0c8, #7ddf9e);
+            background: linear-gradient(135deg, #a8f0c8, #7ddf9e, #5fd98d);
+            background-size: 200% 200%;
             color: #2d6a4f;
             box-shadow: 0 2px 8px rgba(125, 223, 158, 0.4);
+            animation: badgePulse 2s ease infinite, badgeGradient 3s ease infinite;
+        }
+
+        @keyframes badgePulse {
+            0%, 100% { box-shadow: 0 2px 8px rgba(125, 223, 158, 0.4); }
+            50% { box-shadow: 0 4px 15px rgba(125, 223, 158, 0.7), 0 0 20px rgba(125, 223, 158, 0.3); }
+        }
+
+        @keyframes badgeGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .status-badge.inactive {
-            background: linear-gradient(135deg, #ffccd5, #ffb3c1);
+            background: linear-gradient(135deg, #ffccd5, #ffb3c1, #ff99aa);
+            background-size: 200% 200%;
             color: #c9184a;
             box-shadow: 0 2px 8px rgba(255, 179, 193, 0.4);
+            animation: badgeInactivePulse 2s ease infinite, badgeGradient 3s ease infinite;
+        }
+
+        @keyframes badgeInactivePulse {
+            0%, 100% { box-shadow: 0 2px 8px rgba(255, 179, 193, 0.4); }
+            50% { box-shadow: 0 4px 15px rgba(255, 179, 193, 0.6); }
         }
 
         /* フッター */
@@ -283,12 +415,38 @@
         }
 
         .footer-content {
-            background: rgba(255, 255, 255, 0.9);
+            background: linear-gradient(
+                135deg,
+                rgba(255, 255, 255, 0.95),
+                rgba(255, 240, 245, 0.9),
+                rgba(240, 248, 255, 0.9)
+            );
+            background-size: 200% 200%;
+            animation: footerGradient 6s ease infinite;
             backdrop-filter: blur(10px);
             border-radius: 20px;
             padding: 1.5rem 2rem;
             display: inline-block;
-            box-shadow: 0 5px 20px rgba(255, 182, 193, 0.3);
+            box-shadow: 0 5px 25px rgba(255, 182, 193, 0.4), 0 0 30px rgba(202, 237, 255, 0.2);
+            border: 2px solid transparent;
+            position: relative;
+        }
+
+        .footer-content::before {
+            content: '';
+            position: absolute;
+            inset: -2px;
+            border-radius: 22px;
+            background: linear-gradient(90deg, var(--pink), var(--blue-light), var(--lavender), var(--pink));
+            background-size: 300% 100%;
+            animation: borderGradient 4s linear infinite;
+            z-index: -1;
+        }
+
+        @keyframes footerGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .ai-credit {
@@ -297,16 +455,29 @@
             justify-content: center;
             gap: 0.5rem;
             font-size: 1rem;
-            color: var(--text-light);
+            background: linear-gradient(90deg, var(--text-light), var(--pink-dark), var(--blue), var(--text-light));
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: textGradient 4s linear infinite;
         }
 
         .heart-icon {
-            animation: heartbeat 1.5s ease-in-out infinite;
+            animation: heartbeat 1.5s ease-in-out infinite, heartGlow 2s ease infinite;
+            -webkit-text-fill-color: initial;
         }
 
         @keyframes heartbeat {
             0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.2); }
+            25% { transform: scale(1.1); }
+            50% { transform: scale(1.25); }
+            75% { transform: scale(1.1); }
+        }
+
+        @keyframes heartGlow {
+            0%, 100% { filter: drop-shadow(0 0 5px rgba(255, 105, 180, 0.5)); }
+            50% { filter: drop-shadow(0 0 15px rgba(255, 105, 180, 0.9)); }
         }
 
         /* レスポンシブ */
